# apply-srbiau

./: .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  PRODUCT.md  README.md  compose.yml  main.py  package-lock.json  pyproject.toml
.impeccable/: design.json
.impeccable/critique/: 2026-06-25T20-44-16Z__frontend-src-pages.md
backend/: Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251227_00_initial_schema.py  20251228_01_add_tracked_programs.py  20251229_01_add_matching_profile.py  20260623_01_repair_ghadam_transactions.py  20260624_01_add_raw_crawl_items.py  20260624_02_add_recommendation_snapshots.py  20260624_03_add_tracker_reminders.py  20260624_04_add_experience_sharing.py  20260624_05_add_llm_filled_fields_to_courses.py  2e8ff905c462_add_google_auth_fields_to_users.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: activities.py  applicant_onboarding.py  applicants.py  applications.py  auth.py  courses.py  documents.py  experiences.py  ghadam.py  languages.py  matching.py  router.py  subscriptions.py  tracker.py  universities.py  wallet.py
backend/app/models/: __init__.py  activity.py  applicant.py  applicant_language_test.py  applicant_work_experience.py  application.py  course.py  course_language_requirement.py  document.py  ghadam.py  language.py  matching_profile.py  subscription.py  tracked_program.py  university.py  user.py
backend/app/services/: auth.py  course_access.py  file_storage.py  ghadam.py  google_oauth.py  matching.py  sms.py
backend/app/tests/: test_matching_service.py
backend/app/tools/seed/: fake_seed.py  seed.py
crawlers/: Dockerfile  README.md  cli.py  db.py  pyproject.toml  requirements.txt
crawlers/base/: __init__.py  crawler.py  engine.py
crawlers/canada_ingestor/: canada_crawler.py  config.py
crawlers/daad_ingestor/: __init__.py  cleaning.py  cli.py  config.py  daad_crawler.py  db.py  dedupe.py  state.py
crawlers/daad_ingestor/clients/: daad.py  ghadam.py
crawlers/refine/: batch_gemini_from_pg.py  deadline_refiner.py
crawlers/studyinnl_ingestor/: __init__.py  config.py  studyinnl_crawler.py
crawlers/swedenua_ingestor/: __init__.py  swedenua_crawler.py
crawlers/tests/: __init__.py  conftest.py  test_studyinnl.py
deploy/: compose.yml
deploy/nginx/conf.d/: apply.conf  local.conf
docs/: ARCHITECTURE.md  CURRENT_STATE.md  LLM_CONTEXT.md  LOCAL_DEVELOPMENT.md  PRODUCT_PROPOSAL.md  TASKS.md
frontend/: .gitignore  99-env.sh  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  index.ts  services.ts  tracker.ts
frontend/src/auth/: googleIdentity.ts
frontend/src/components/: Layout.tsx  Paywall.tsx  index.ts  ui.tsx
frontend/src/components/Feedback/: ConfirmDialog.tsx  Skeleton.tsx  Spinner.tsx  ToastHost.tsx
frontend/src/components/Form/: MultiSelectCombobox.tsx
frontend/src/components/Layout/: Layout.tsx  Navbar.tsx
frontend/src/components/Matching/: ProfileWizard.tsx
frontend/src/components/Tracker/: DeadlineCalendar.tsx  DeadlineList.tsx  ProgramCard.tsx  ProgramSearch.tsx  StatusDropdown.tsx
frontend/src/components/Transitions/: PageTransition.tsx
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx  ThemeContext.tsx  index.ts
frontend/src/hooks/: index.ts
frontend/src/lib/: format.ts
frontend/src/locales/: en.json  fa.json
frontend/src/pages/: ApplicantDetailPage.tsx  ApplicantsPage.tsx  DocumentsPage.tsx  HomePage.tsx  LoginPage.tsx  NewApplicantPage.tsx  SearchPage.tsx  StatsPage.tsx  WalletPage.tsx  index.ts
frontend/src/pages/Auth/: LoginPage.tsx
frontend/src/pages/Dashboard/: AddProgramPage.tsx  DashboardPage.tsx  ProgramDetailPage.tsx
frontend/src/pages/Experiences/: AdminExperienceReviewPage.tsx  (+2 more)
frontend/src/types/: index.ts
postprocess/: .dockerignore  Dockerfile  README.md  pyproject.toml
postprocess/src/postprocess/: cli.py  config.py  db.py  llm_client.py  llm_fallback.py
postprocess/src/postprocess/jobs/: __init__.py  base.py  deadlines.py  llm_enrich.py  parse_raw.py
postprocess/src/postprocess/parsers/: deadlines.py
postprocess/src/postprocess/transformers/: __init__.py  base.py  daad.py  studyinnl.py  swedenua.py
(+6 files in other folders)
