[project]
name = "course-ingestor"
version = "0.1.0"
description = "catalog ingestor for Ghadam"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "tenacity>=8.5.0",
  "rapidfuzz>=3.9.6",
  "python-dateutil>=2.9.0.post0",
  "dateparser>=1.2.0",
  "aiolimiter>=1.1.0",
]

[project.scripts]
daad-ingest = "daad_ingestor.cli:main"

[dependency-groups]
dev = ["ruff>=0.6.9"]
