[project]
name = "ghadam-crawlers"
version = "2.0.0"
description = "Modular crawlers for academic program data from multiple sources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "asyncpg>=0.29",
    "aiolimiter>=1.1",
    "tenacity>=8.2",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "rapidfuzz>=3.6",
    "python-dateutil>=2.8",
    "dateparser>=1.2",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
# Unified CLI (recommended)
crawl = "cli:main"
# Legacy/specific CLIs
daad-ingest = "daad_ingestor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["base", "daad_ingestor", "studyinnl_ingestor", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
